@@ -1,1 +1,1 @@
-GTK_TYPE_CLUTTER        GtkClutter      GtkObject       Gtk2::ClutterEmbed
+GTK_TYPE_CLUTTER_EMBED  GtkClutterEmbed GtkObject       Gtk2::ClutterEmbed
