@@ -1,11 +1,11 @@
 #include "clutterperl.h"
 
-MODULE = Gtk2::ClutterEmbed     PACKAGE = Gtk2::ClutterEmbed    PREFIX = gtk_clutter_
+MODULE = Gtk2::ClutterEmbed     PACKAGE = Gtk2::ClutterEmbed    PREFIX = gtk_clutter_embed_
 
 GtkWidget *
-gtk_clutter_new (class)
+gtk_clutter_embed_new (class)
     C_ARGS:
         /* void */
 
 ClutterActor *
-gtk_clutter_get_stage (GtkClutter *clutter)
+gtk_clutter_embed_get_stage (GtkClutterEmbed *embed)
